# MaksimEngine

./: CMakeLists.txt  README.md  compile_commands.json  file.md  roadmap.md
assets/models/glb/: cube.glb  triangle.glb
game/: main.cpp
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: asset_pool.cpp  asset_pool.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp  imgui.cpp  imgui.hpp  input.cpp  input.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
tools/: model_compiler.cpp  texture_compiler.cpp
